	right.

	They no longer segfault for invalid zero-length specification
	of 'yleft, 'yright', or 'f'.

    o	seq_along(x) is now equivalent to seq_len(length(x)) even where
	length() has an S3/S4 method; previously it (intentionally)
	always used the default method for length().

    o	PCRE has been updated to version 7.9 (for bug fixes).


DEPRECATED & DEFUNCT

    o	R CMD Rd2txt is deprecated, and will be removed in 2.10.0.
	(It is just a wrapper for R CMD Rdconv -t txt.)


BUG FIXES

    o	parse_Rd() still did not handle source reference encodings
	properly.

    o	The C utility function PrintValue no longer attempts to print
	attributes for CHARSXPs as those attributes are used
	internally for the CHARSXP cache.  This fixes a segfault when
	calling Rf_PrintValue on a CHARSXP from C code.

    o	PDF graphics output was producing TWO instances of anything
	drawn with the symbol font face. (Report from Baptiste Auguie.)

    o	length(x) <- newval and grep() could cause memory corruption.
	(PR#13837)

    o	If model.matrix() was given too large a model, it could crash
	R. (PR#13838, fix found by Olaf Mersmann.)

    o	gzcon() (used by load()) would re-open an open connection,
    	leaking a file descriptor each time. (PR#13841)

    o	The checks for inconsistent inheritance reported by setClass()
	now detect inconsistent superclasses and give better warning
	messages.

    o	print.anova() failed to recognize the column labelled
    	P(>|Chi|) from a Poisson/binomial GLM anova as a p-value
    	column in order to format it appropriately (and as a
    	consequence it gave no significance stars).

    o	A missing PROTECT caused rare segfaults during calls to
    	load().  (PR#13880, fix found by Bill Dunlap.)

    o	gsub() in a non-UTF-8 locale with a marked UTF-8 input
	could in rare circumstances overrun a buffer and so segfault.

    o	R CMD Rdconv --version was not working correctly.

    o   Missing PROTECTs in nlm() caused "random" errors. (PR#13381 by